--- a/aula40/package.json
+++ b/aula40/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "mocha test/supertest.test.js"
+    "test": "mocha './test/**/*.test.js'"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +24,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "chai": "^4.3.7",
-    "mocha": "^10.1.0"
+    "chai": "^4.4.1",
+    "mocha": "^10.4.0"
   }
 }
